# Trading_Results_Parser

./: .env.sample  .flake8  README.md  abc_classes.py  async_main.py  config.py  database.py  docker-compose.yaml  func.py  main.py  models.py  pyproject.toml  repositories.py  sync_main.py  uow.py
db/: config.py  database.py  models.py
services/: data_transformation.py  date_transform.py  excel_parsers.py  html_page_parsers.py  load_pages.py  load_tables.py  loaders.py  parsers.py
