[tool.poetry]
name = "homeworkk-2-exercise"
version = "0.1.0"
description = ""
authors = ["Anton Gromov <seed14112@yaandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
bs4 = "^0.0.2"
lxml = "^5.3.1"
xlrd = "^2.0.1"
sqlalchemy = "^2.0.39"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
aiohttp = "^3.11.16"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
extend-exclude = "migrations/"

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
skip = ["__init__.py", "**/migrations/*"]

package-mode = false